--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ html {
   font-style: normal;
   line-height: 1.5;
   font-weight: 400;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
